# Lab_1

./: .gitignore  CMakeLists.txt  README.md  abstract_graph.h  chain.cpp  chain.h  chain_tests.cpp  clique.cpp  clique.h  clique_tests.cpp  graph.cpp  graph.h  graph_tests.cpp  time_analisys.md  time_research.cpp  traffic_manager.cpp  traffic_manager.h  traffic_manager_tests.cpp
